--- a/public/courses/web.html
+++ b/public/courses/web.html
@@ -381,21 +381,26 @@
                     ></button>
                   </div>
                   <div class="modal-body">
-                    <div class="d-flex justify-content-between">
-                      <a href="https://rzp.io/l/RLwh0Cec4">
-                        <button
-                          type="button"
-                          class="content_btn2 text-decoration-none"
-                        >
-                          Join our 6 Months Course
+                    <div class="d-flex justify-content-evenly flex-wrap">
+                      <a href="../register.html" class="text-decoration-none">
+                        <button type="button" class="content_btn2 text-decoration-none">
+                          Join our Offline Course
                         </button>
                       </a>
-                      <a href="https://rzp.io/l/uUUgSlExC8">
+                      <a href="https://rzp.io/l/RLwh0Cec4" class="text-decoration-none">
                         <button
                           type="button"
                           class="content_btn2 text-decoration-none"
                         >
-                          Join our 45 Days Course
+                          Join our 6 Months Online Course
+                        </button>
+                      </a>
+                      <a href="https://rzp.io/l/uUUgSlExC8" class="text-decoration-none">
+                        <button
+                          type="button"
+                          class="content_btn2 text-decoration-none"
+                        >
+                          Join our 6 Weeks Online Course
                         </button>
                       </a>  
                     </div>
