--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider. From development to cybersecurity, AI to digital marketing, we got you covered!"
+      content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider.From development to cybersecurity, AI to digital marketing, we got you covered!"
     />
+    <meta property="og:title" content="Home - ANSH InfoTech:Leading IT Solutions in Ludhiana">
+    <meta property="og:description" content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider.From development to cybersecurity, AI to digital marketing, we got you covered!">
+    <meta property="og:url" content="https://anshinfotech.org">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://anshinfotech.org/logo">
+
     <title>Home - ANSH InfoTech:Leading IT Solutions in Ludhiana</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -14,6 +20,8 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+   <link rel="shortcut icon" href="logo.jpeg" type="image/x-icon">
+   <link rel=" icon" href="logo.jpeg" type="image/x-icon">
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
     <!-- font awesome -->
@@ -707,20 +715,21 @@
         <div class="owl-carousel owl-theme">
           <div class="item" style="height: 50px; gap: 10px">
             <img
-              src="https://anshinfotech.org/img/clients/logo.png"
+              src="./images/saguna.jpeg"
               class="img-fluid client-img"
+              alt="not-found"
             />
           </div>
           <div class="item" style="height: 50px">
             <img
-              src="https://anshinfotech.org/img/clients/eQuasar.png"
+              src="./images/eQuasar.jpeg"
               alt="not-found"
               class="img-fluid client-img"
             />
           </div>
           <div class="item" style="height: 50px">
             <img
-              src="https://anshinfotech.org/img/clients/syngery.png"
+              src="./images/syngery.jpeg"
               alt="not-found"
               class="img-fluid client-img"
             />
