--- a/public/training.html
+++ b/public/training.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider. From development to cybersecurity, AI to digital marketing, we got you covered!">
+    <meta
+      name="description"
+      content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider. From development to cybersecurity, AI to digital marketing, we got you covered!"
+    />
     <title>Training - ANSH InfoTech:Leading IT Solutions in Ludhiana</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -198,12 +201,6 @@
                   />
                   <p class="text-white w-100">Matplotlib</p>
                 </div>
-                <div class="icon">
-                  <img
-                    src="https://user-images.githubusercontent.com/315810/92159303-30d41100-edfb-11ea-8107-1c5352202571.png"
-                  />
-                  <p class="text-white w-100">Seaborn</p>
-                </div>
               </div>
             </div>
           </div>
@@ -309,26 +306,20 @@
 
               <div class="tech-icons">
                 <div class="icon">
-                  <img
-                    src="https://www.stickerpress.in/media/products/800x800/d6061e2a15f14dbaa6a542b313c9305f.jpg"
-                  />
-                  <p class="text-white">MongoDB</p>
+                  <img src="images/burp-suite-logo.jpg" />
+                  <p class="text-white">Burp-Suite</p>
                 </div>
                 <div class="icon">
-                  <img
-                    src="https://ih1.redbubble.net/image.438908244.6144/st,small,507x507-pad,600x600,f8f8f8.u2.jpg"
-                  />
-                  <p class="text-white w-100">Express Js</p>
+                  <img src="images/kali-logo.png" />
+                  <p class="text-white w-100">Kali Linux</p>
                 </div>
                 <div class="icon">
-                  <img
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHT5uUPJZYqRc9rBFpe2NbLlEbCzjk_VdzDNNnBjR7QhiuQ2dbjDOgyGbgTo8wZrD_GNI&usqp=CAU"
-                  />
-                  <p class="text-white w-100">Node Js</p>
+                  <img src="images/metasploit-logo.jpg" />
+                  <p class="text-white w-100">MetaSploit</p>
                 </div>
                 <div class="icon">
-                  <img src="images/react_logo.png" />
-                  <p class="text-white w-100">React Js</p>
+                  <img src="images/nessus-logo.png" />
+                  <p class="text-white w-100">Nessus</p>
                 </div>
               </div>
             </div>
@@ -714,18 +705,15 @@
               <div class="col-4 footer-col">
                 <h5>Reach Out To Us</h5>
                 <ul>
-                  <li><i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
-                  </li>
                   <li>
-                    <i class="fa-solid fa-phone"></i> +911234567890
+                    <i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
                   </li>
-                  <li>
-                    <i class="fa-solid fa-phone"></i> +911234567890
-                  </li>
+                  <li><i class="fa-solid fa-phone"></i> +911234567890</li>
+                  <li><i class="fa-solid fa-phone"></i> +911234567890</li>
                 </ul>
               </div>
               <div class="col-4 footer-col">
-                <h5 >Quick Links</h5>
+                <h5>Quick Links</h5>
                 <ul class="quick-links">
                   <li>
                     <a href="Contactus.html">Contact Us</a>
