--- a/public/training.html
+++ b/public/training.html
@@ -14,7 +14,12 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"
+      integrity="sha256-5uKiXEwbaQh9cgd2/5Vp6WmMnsUr3VZZw0a8rKnOKNU="
+      crossorigin="anonymous"
+    />
     <!-- font awesome -->
     <link
       rel="stylesheet"
@@ -344,6 +349,341 @@
               tech, we fuel your curiosity and equip you for a lifetime of
               digital evolution!
             </p>
+          </div>
+        </div>
+
+        <!-- Testimonials -->
+
+        <div class="testimonial">
+          <h1 class="text-center">What our clients say about us</h1>
+          <div
+            class="splide"
+            role="group"
+            aria-label="Splide Basic HTML Example"
+            style="margin: 120px 50px"
+          >
+            <div class="splide__track">
+              <ul class="splide__list">
+                <li class="splide__slide">
+                  <div class="d-flex flex-column align-items-center">
+                    <img
+                      class="rounded-circle shadow-1-strong mb-4"
+                      src="images/Reviews/Charandeep Singh.webP"
+                      alt="avatar"
+                      height=""
+                      width="150"
+                    />
+                    <div class="text-center">
+                      <h5 class="mb-3">Charandeep Singh</h5>
+                      <p>Web Developer</p>
+                      <p class="text-muted">
+                        <i class="fas fa-quote-left pe-2"></i>
+                        It was a great experience. My course was web
+                        development. The curriculum has all the topics, and the
+                        content and technologies used were always up to date
+                        with current market requirements
+                      </p>
+                    </div>
+                    <ul
+                      class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                    >
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="d-flex flex-column align-items-center">
+                    <img
+                      class="rounded-circle shadow-1-strong mb-4"
+                      src="images/Reviews/Cropped_Image (1).webP"
+                      alt="avatar"
+                      height=""
+                      width="150"
+                    />
+                    <div class="text-center">
+                      <h5 class="mb-3">Jobanpal Singh</h5>
+                      <p>Web Developer</p>
+                      <p class="text-muted">
+                        <i class="fas fa-quote-left pe-2"></i>
+                        This is simply the best Web Development course. Sir did
+                        a great job and put his heart into teaching all concepts
+                        of the course. Whenever I had doubts, he was eager to
+                        answer and helped me learn easily. Highly recommended.
+                      </p>
+                    </div>
+                    <ul
+                      class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                    >
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="far fa-star fa-sm"></i></li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="d-flex flex-column align-items-center">
+                    <img
+                      class="rounded-circle shadow-1-strong mb-4"
+                      src="images/Reviews/Cropped_Image (2).webP"
+                      alt="avatar"
+                      height=""
+                      width="150"
+                    />
+                    <div class="text-center">
+                      <h5 class="mb-3">Anhad Singh</h5>
+                      <p>Web Developer</p>
+                      <p class="text-muted">
+                        <i class="fas fa-quote-left pe-2"></i>
+                        I’m glad I made the decision to take this course. Can’t
+                        appreciate it enough. I missed a few live classes but
+                        they provided me the recording and also cleared my
+                        doubts in the next classes
+                      </p>
+                    </div>
+                    <ul
+                      class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                    >
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="far fa-star fa-sm"></i></li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="d-flex flex-column align-items-center">
+                    <img
+                      class="rounded-circle shadow-1-strong mb-4"
+                      src="images/Reviews/Cropped_Image (3).webP"
+                      alt="avatar"
+                      height=""
+                      width="150"
+                    />
+                    <div class="text-center">
+                      <h5 class="mb-3">Vipin Kumar</h5>
+                      <p>Web Developer</p>
+                      <p class="text-muted">
+                        <i class="fas fa-quote-left pe-2"></i>
+                        The trainer here makes the content easy to learn and
+                        answers all the questions during the classes. I learned
+                        a lot of important concepts which looked so complex to
+                        me when I started. I recommend this course to anyone who
+                        wants to learn any course.
+                      </p>
+                    </div>
+                    <ul
+                      class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                    >
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="far fa-star fa-sm"></i></li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="d-flex flex-column align-items-center">
+                    <img
+                      class="rounded-circle shadow-1-strong mb-4"
+                      src="images/Reviews/Cropped_Image (4).webP"
+                      alt="avatar"
+                      height=""
+                      width="150"
+                    />
+                    <div class="text-center">
+                      <h5 class="mb-3">Urvashi Mishra</h5>
+                      <p>Data Analytics</p>
+                      <p class="text-muted">
+                        <i class="fas fa-quote-left pe-2"></i>
+                        Thank you ANSH InfoTech. I really learned a lot during
+                        the entire training. The practicals, exercises, and
+                        projects were really good. I applied for a few jobs in
+                        the Machine Learning field and finally got placed with a
+                        good package.
+                      </p>
+                    </div>
+                    <ul
+                      class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                    >
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="d-flex flex-column align-items-center">
+                    <img
+                      class="rounded-circle shadow-1-strong mb-4"
+                      src="images/Reviews/Cropped_Image (5).webP"
+                      alt="avatar"
+                      height=""
+                      width="150"
+                    />
+                    <div class="text-center">
+                      <h5 class="mb-3">Nirbhay Singh</h5>
+                      <p>Web Developer</p>
+                      <p class="text-muted">
+                        <i class="fas fa-quote-left pe-2"></i>
+                        I would like to thank the trainer and ANSH InfoTech for
+                        the enhanced training provided during the entire course.
+                        The trainer has brilliant knowledge. The course content
+                        covers beginner to pro. Also, sir is a good motivator
+                        and friendly person.
+                      </p>
+                    </div>
+                    <ul
+                      class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                    >
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="d-flex flex-column align-items-center">
+                    <img
+                      class="rounded-circle shadow-1-strong mb-4"
+                      src="images/Reviews/Cropped_Image.webP"
+                      alt="avatar"
+                      height=""
+                      width="150"
+                    />
+                    <div class="text-center">
+                      <h5 class="mb-3">Rutansha Dhir</h5>
+                      <p>Digital Marketing</p>
+                      <p class="text-muted">
+                        <i class="fas fa-quote-left pe-2"></i>
+                        I did not have knowledge of digital marketing before
+                        enrolling in this course. However, everything was taught
+                        from scratch. Initially, I thought I can’t do this. But
+                        the way of teaching and content is really simple and
+                        great!
+                      </p>
+                    </div>
+                    <ul
+                      class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                    >
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="d-flex flex-column align-items-center">
+                    <img
+                      class="rounded-circle shadow-1-strong mb-4"
+                      src="images/Reviews/WhatsApp Image 2024-04-06 at 4.56.43 PM.webP"
+                      alt="avatar"
+                      height=""
+                      width="150"
+                    />
+                    <div class="text-center">
+                      <h5 class="mb-3">Pratham Chhabra</h5>
+                      <p>Digital Marketing</p>
+                      <p class="text-muted">
+                        <i class="fas fa-quote-left pe-2"></i>
+                        I would like to thank the trainer and ANSH InfoTech for
+                        the enhanced training provided during the entire course.
+                        The trainer has brilliant knowledge. The course content
+                        covers beginner to pro. Also, teachers here are good
+                        motivators and are friendly.
+                      </p>
+                    </div>
+                    <ul
+                      class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                    >
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="far fa-star fa-sm"></i></li>
+                    </ul>
+                  </div>
+                </li>
+
+                <li class="splide__slide">
+                  <div class="d-flex flex-column align-items-center">
+                    <img
+                      class="rounded-circle shadow-1-strong mb-4"
+                      src="images/Reviews/cs 1.webP"
+                      alt="avatar"
+                      height=""
+                      width="150"
+                    />
+                    <div class="text-center">
+                      <h5 class="mb-3">Surmeet Singh</h5>
+                      <p>Cyber Security</p>
+                      <p class="text-muted">
+                        <i class="fas fa-quote-left pe-2"></i>
+                        The trainer here makes the content easy to learn and
+                        answers all the questions during the classes. I learned
+                        a lot of important concepts which looked so complex to
+                        me when I started. I recommend this course to anyone who
+                        wants to learn any course in Ansh InfoTech.
+                      </p>
+                    </div>
+                    <ul
+                      class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                    >
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="far fa-star fa-sm"></i></li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="d-flex flex-column align-items-center">
+                    <img
+                      class="rounded-circle shadow-1-strong mb-4"
+                      src="images/Reviews/cs 2.webP"
+                      alt="avatar"
+                      height=""
+                      width="150"
+                    />
+                    <div class="text-center">
+                      <h5 class="mb-3">Vijay Rajput</h5>
+                      <p>Cyber Security</p>
+                      <p class="text-muted">
+                        <i class="fas fa-quote-left pe-2"></i>
+                        I recently completed a penetration testing training
+                        course in Ansh InfoTech, and I am thoroughly impressed.
+                        The instructors were highly skilled. The handson labs
+                        and real-world scenarios allowed me to gain valuable
+                        experience
+                      </p>
+                    </div>
+                    <ul
+                      class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                    >
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                      <li><i class="fas fa-star fa-sm"></i></li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
 
@@ -759,5 +1099,34 @@
       integrity="sha256-FZsW7H2V5X9TGinSjjwYJ419Xka27I8XPDmWryGlWtw="
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"
+      integrity="sha256-FZsW7H2V5X9TGinSjjwYJ419Xka27I8XPDmWryGlWtw="
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      var splide = new Splide(".splide", {
+        type: "loop",
+        perPage: 3,
+        gap: "100px",
+        autoplay: true,
+        arrows: false,
+        pagination: false,
+        breakpoints: {
+          992: {
+            perPage: 2,
+            gap: "80px",
+            height: "auto",
+          },
+          680: {
+            perPage: 1,
+            gap: "80px",
+            height: "auto",
+          },
+        },
+      });
+
+      splide.mount();
+    </script>
   </body>
 </html>
