--- a/public/about.html
+++ b/public/about.html
@@ -290,8 +290,8 @@
                   <li>
                     <i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
                   </li>
-                  <li><i class="fa-solid fa-phone"></i> +911234567890</li>
-                  <li><i class="fa-solid fa-phone"></i> +911234567890</li>
+                  <li><i class="fa-solid fa-phone"></i> +91 88376 54161</li>
+                  <li><i class="fa-solid fa-phone"></i> +91 82647 54342</li>
                 </ul>
               </div>
               <div class="col-4 footer-col">
