--- a/public/Contactus.html
+++ b/public/Contactus.html
@@ -174,9 +174,9 @@
                   <div class="col-sm-10">
                     <h3>Call:</h3>
                     <p>
-                      +91-94171-68347
+                      +91 88376 54161
                       <br />
-                      +91-84278-99400
+                      +91 82647 54342
                     </p>
                   </div>
                 </div>
@@ -262,10 +262,10 @@
                   <li><i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
                   </li>
                   <li>
-                    <i class="fa-solid fa-phone"></i> +911234567890
+                    <i class="fa-solid fa-phone"></i> +91 88376 54161
                   </li>
                   <li>
-                    <i class="fa-solid fa-phone"></i> +911234567890
+                    <i class="fa-solid fa-phone"></i> +91 82647 54342
                   </li>
                 </ul>
               </div>
