--- a/public/FaQ's.html
+++ b/public/FaQ's.html
@@ -631,10 +631,10 @@
                   <li><i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
                   </li>
                   <li>
-                    <i class="fa-solid fa-phone"></i> +911234567890
+                    <i class="fa-solid fa-phone"></i> +91 88376 54161
                   </li>
                   <li>
-                    <i class="fa-solid fa-phone"></i> +911234567890
+                    <i class="fa-solid fa-phone"></i> +91 82647 54342
                   </li>
                 </ul>
               </div>
