--- a/public/Try.html
+++ b/public/Try.html
@@ -30,13 +30,13 @@
             <div class="tech-icons">
               <div class="icon">
                 <img
-                  src="https://www.stickerpress.in/media/products/800x800/d6061e2a15f14dbaa6a542b313c9305f.jpg"
+                  src="https://www.stickerpress.in/media/products/800x800/d6061e2a15f14dbaa6a542b313c9305fwebP"
                 />
                 <p class="text-white">MongoDB</p>
               </div>
               <div class="icon">
                 <img
-                  src="https://ih1.redbubble.net/image.438908244.6144/st,small,507x507-pad,600x600,f8f8f8.u2.jpg"
+                  src="https://ih1.redbubble.net/image.438908244.6144/st,small,507x507-pad,600x600,f8f8f8.u2webP"
                 />
                 <p class="text-white w-100">Express Js</p>
               </div>
@@ -48,7 +48,7 @@
               </div>
               <div class="icon">
                 <img
-                  src="https://icons-for-free.com/iconfiles/png/512/design+development+facebook+framework+mobile+react+icon-1320165723839064798.png"
+                  src="https://icons-for-free.com/iconfiles/png/512/design+development+facebook+framework+mobile+react+icon-1320165723839064798webP"
                 />
                 <p class="text-white w-100">React Js</p>
               </div>
@@ -69,13 +69,13 @@
             <div class="tech-icons">
               <div class="icon">
                 <img
-                  src="https://www.stickerpress.in/media/products/800x800/d6061e2a15f14dbaa6a542b313c9305f.jpg"
+                  src="https://www.stickerpress.in/media/products/800x800/d6061e2a15f14dbaa6a542b313c9305fwebP"
                 />
                 <p class="text-white">MongoDB</p>
               </div>
               <div class="icon">
                 <img
-                  src="https://ih1.redbubble.net/image.438908244.6144/st,small,507x507-pad,600x600,f8f8f8.u2.jpg"
+                  src="https://ih1.redbubble.net/image.438908244.6144/st,small,507x507-pad,600x600,f8f8f8.u2webP"
                 />
                 <p class="text-white w-100">Express Js</p>
               </div>
@@ -87,7 +87,7 @@
               </div>
               <div class="icon">
                 <img
-                  src="https://icons-for-free.com/iconfiles/png/512/design+development+facebook+framework+mobile+react+icon-1320165723839064798.png"
+                  src="https://icons-for-free.com/iconfiles/png/512/design+development+facebook+framework+mobile+react+icon-1320165723839064798webP"
                 />
                 <p class="text-white w-100">React Js</p>
               </div>
@@ -107,13 +107,13 @@
             <div class="tech-icons">
               <div class="icon">
                 <img
-                  src="https://www.stickerpress.in/media/products/800x800/d6061e2a15f14dbaa6a542b313c9305f.jpg"
+                  src="https://www.stickerpress.in/media/products/800x800/d6061e2a15f14dbaa6a542b313c9305fwebP"
                 />
                 <p class="text-white">MongoDB</p>
               </div>
               <div class="icon">
                 <img
-                  src="https://ih1.redbubble.net/image.438908244.6144/st,small,507x507-pad,600x600,f8f8f8.u2.jpg"
+                  src="https://ih1.redbubble.net/image.438908244.6144/st,small,507x507-pad,600x600,f8f8f8.u2webP"
                 />
                 <p class="text-white w-100">Express Js</p>
               </div>
@@ -125,7 +125,7 @@
               </div>
               <div class="icon">
                 <img
-                  src="https://icons-for-free.com/iconfiles/png/512/design+development+facebook+framework+mobile+react+icon-1320165723839064798.png"
+                  src="https://icons-for-free.com/iconfiles/png/512/design+development+facebook+framework+mobile+react+icon-1320165723839064798webP"
                 />
                 <p class="text-white w-100">React Js</p>
               </div>
