--- a/public/courses/dm.html
+++ b/public/courses/dm.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">
-          <!-- <img src="images/logowebP" alt="Bootstrap" width="240" height="50" /> -->
+          <!-- <img src="images/logo.webP" alt="Bootstrap" width="240" height="50" /> -->
           <h1 class="heading">ANSH InfoTech</h1>
         </a>
         <button
