--- a/public/devlopment.html
+++ b/public/devlopment.html
@@ -383,7 +383,7 @@
         <div class="container">
           <div class="row justify-content-between">
             <div class="col-md-8 copy-col">
-              <span>&copy; Copyright Unify - All Rights Reserved.</span>
+              <span>&copy; Copyright ANSH InfoTech - All Rights Reserved.</span>
             </div>
             <div class="col-md-3 copy-col">
               <i class="fab fa-facebook"></i> <i class="fab fa-instagram"></i>
