--- a/public/Alogin.html
+++ b/public/Alogin.html
@@ -59,7 +59,7 @@
       <div class="login-container">
         <h2><i class="fas fa-user"></i> Admin Login</h2>
         <form
-          action="http://localhost:3000/api/admin/login"
+          action="/api/admin/login"
           method="POST"
           id="loginform"
         >
@@ -112,7 +112,7 @@
           event.preventDefault();
 
           // Fetch API to send data to the server
-          fetch("http://localhost:3000/api/admin/login", {
+          fetch("https://ait-1.onrender.com/api/admin/login", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
