--- a/public/training.html
+++ b/public/training.html
@@ -693,7 +693,7 @@
                   />
                   <div class="text-center">
                     <h5 class="mb-3">Diksha Thakur</h5>
-                    <p>Cyber Security</p>
+                    <p>Artificial Intelligence</p>
                     <p class="text-muted">
                       <i class="fas fa-quote-left pe-2"></i>
                       I m diksha thakur from MATA GUJRI COLLEGE ,FATEHGARH SAHIB
@@ -821,7 +821,7 @@
                     width="150"
                   />
                   <div class="text-center">
-                    <h5 class="mb-3">Gurleen Kaur</h5>
+                    <h5 class="mb-3">Gurleen Kaur Arneja</h5>
                     <p>Web Developer</p>
                     <p class="text-muted">
                       <i class="fas fa-quote-left pe-2"></i>
@@ -831,6 +831,170 @@
                       diverse projects, enhancing my skills and gaining valuable
                       industry insight. Highly recommend AIT for anyone looking
                       to kickstart their career in IT!
+                    </p>
+                  </div>
+                  <ul
+                    class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                  >
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                  </ul>
+                </div>
+              </li>
+              <li class="splide__slide">
+                <div class="d-flex flex-column align-items-center">
+                  <img
+                    class="rounded-circle shadow-1-strong mb-4"
+                    src="images/Reviews/Gurleen.webP"
+                    alt="avatar"
+                    height=""
+                    width="150"
+                  />
+                  <div class="text-center">
+                    <h5 class="mb-3">Gurleen Kaur</h5>
+                    <p>Web Developer</p>
+                    <p class="text-muted">
+                      <i class="fas fa-quote-left pe-2"></i>
+                      The session was incredibly informative and engaging. I
+                      appreciated the clear explanations and
+                      interactives.𝙳istinction to the instructors for making
+                      complex topics easy to understand.
+                    </p>
+                  </div>
+                  <ul
+                    class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                  >
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                  </ul>
+                </div>
+              </li>
+
+              <li class="splide__slide">
+                <div class="d-flex flex-column align-items-center">
+                  <img
+                    class="rounded-circle shadow-1-strong mb-4"
+                    src="images/Reviews/Amanpreet.webP"
+                    alt="avatar"
+                    height=""
+                    width="150"
+                  />
+                  <div class="text-center">
+                    <h5 class="mb-3">Amanpreet Kaur</h5>
+                    <p>Web Developer</p>
+                    <p class="text-muted">
+                      <i class="fas fa-quote-left pe-2"></i>
+                      I am student of web development in your institute.My name
+                      is Amanpreet Kaur and I joined AIT from last few months.It
+                      was very helpful and I understood things so easily. A
+                      beginner in this field will surely be benefited. Also the
+                      extra material is very helpful. This helped me take up
+                      full stack web development.
+                    </p>
+                  </div>
+                  <ul
+                    class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                  >
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                  </ul>
+                </div>
+              </li>
+
+              <li class="splide__slide">
+                <div class="d-flex flex-column align-items-center">
+                  <img
+                    class="rounded-circle shadow-1-strong mb-4"
+                    src="images/Reviews/Shivani.webP"
+                    alt="avatar"
+                    height=""
+                    width="150"
+                  />
+                  <div class="text-center">
+                    <h5 class="mb-3">Shivani</h5>
+                    <p>Web Developer</p>
+                    <p class="text-muted">
+                      <i class="fas fa-quote-left pe-2"></i>
+                      AIT is a standout IT company, providing top-notch services
+                      and solutions. Their team is incredibly knowledgeable,
+                      dedicated, and always goes the extra mile to ensure client
+                      satisfaction. From seamless project management to
+                      cutting-edge technology expertise, AIT consistently
+                      delivers excellence. Highly recommend them for any IT
+                      needs!"
+                    </p>
+                  </div>
+                  <ul
+                    class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                  >
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                  </ul>
+                </div>
+              </li>
+              <li class="splide__slide">
+                <div class="d-flex flex-column align-items-center">
+                  <img
+                    class="rounded-circle shadow-1-strong mb-4"
+                    src="images/Reviews/Muktawali.webP"
+                    alt="avatar"
+                    height=""
+                    width="150"
+                  />
+                  <div class="text-center">
+                    <h5 class="mb-3">Muktawali</h5>
+                    <p>Artificial Intelligence</p>
+                    <p class="text-muted">
+                      <i class="fas fa-quote-left pe-2"></i>
+                      I joined this institute from a seminar which was held in
+                      our college. My overall experience from this institute is
+                      very excellent. I gain lots of experience. Our teacher and
+                      as well as mentors are very helpful and have a high
+                      knowledge. Thank you for such a great session of training.
+                    </p>
+                  </div>
+                  <ul
+                    class="list-unstyled d-flex justify-content-center text-warning mb-0"
+                  >
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                    <li><i class="fas fa-star fa-sm"></i></li>
+                  </ul>
+                </div>
+              </li>
+
+              <li class="splide__slide">
+                <div class="d-flex flex-column align-items-center">
+                  <img
+                    class="rounded-circle shadow-1-strong mb-4"
+                    src="images/Reviews/Harpreet.webP"
+                    alt="avatar"
+                    height=""
+                    width="150"
+                  />
+                  <div class="text-center">
+                    <h5 class="mb-3">Harpreet Kaur</h5>
+                    <p>Web Developer</p>
+                    <p class="text-muted">
+                      <i class="fas fa-quote-left pe-2"></i>
+                      I m student of web development in ur institute from the
+                      last 3 months and having great experience in AIT. Mentors
+                      are very helpful and cooperative help us to learn new
+                      skills and technologies with their great efforts .
                     </p>
                   </div>
                   <ul
