--- a/public/training.html
+++ b/public/training.html
@@ -848,7 +848,7 @@
                 <div class="d-flex flex-column align-items-center">
                   <img
                     class="rounded-circle shadow-1-strong mb-4"
-                    src="images/Reviews/Gurleen.webP"
+                    src="images/Reviews/Gurleen (2).webP"
                     alt="avatar"
                     height=""
                     width="150"
