--- a/public/Contactus.html
+++ b/public/Contactus.html
@@ -185,7 +185,7 @@
               <div class="col-md-7">
                 <form
                   id="contactForm"
-                  action="https://ait-1.onrender.com/api/conatct-us"
+                  action="http://localhost:3000/api/conatct-us"
                   method="post"
                 >
                   <div class="mb-3">
@@ -322,7 +322,7 @@
         registrationForm.addEventListener("submit", function (event) {
           event.preventDefault();
 
-          fetch("https://ait-1.onrender.com/api/contact-us", {
+          fetch("http://localhost:3000/api/contact-us", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
